--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  seeweol
 
 # Build settings
 markdown: kramdown
 
 paginate: 4
 
-author: Your name
+author: seeweol
 
 gems: [jekyll-paginate]
